margin top on mobile view fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2602,7 +2602,7 @@ mark {
 
 	.support-program {
 		font-size: 48px;
-		margin-top: 24px;
+		margin-top: 40px;
 		line-height: 60px
 	}
 
@@ -3826,7 +3826,7 @@ mark {
 	}
 
   .contact-us__title{
-    font-size: 2.6rem;
+    font-size: 2.6rem !important;
     line-height: 1.3;
   }
 
@@ -3849,7 +3849,7 @@ mark {
 	}
 
   .contact-us__title{
-    font-size: 2.6rem;
+    font-size: 2.6rem !important;
     line-height: 1.3;
   }
 }
